<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <groupId>com.cdkjframework</groupId>
    <artifactId>cdkj-framework</artifactId>
    <version>1.0.7</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>

  <artifactId>cdkj-util</artifactId>

  <dependencies>
    <dependency>
      <groupId>com.cdkjframework</groupId>
      <artifactId>cdkj-constant</artifactId>
    </dependency>
    <dependency>
      <groupId>com.cdkjframework</groupId>
      <artifactId>cdkj-entity</artifactId>
      <exclusions>
        <exclusion>
          <groupId>com.cdkjframework</groupId>
          <artifactId>cdkj-constant</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>jakarta.mail</groupId>
      <artifactId>jakarta.mail-api</artifactId>
    </dependency>
    <dependency>
      <groupId>com.sun.mail</groupId>
      <artifactId>jakarta.mail</artifactId>
    </dependency>
    <dependency>
      <groupId>com.github.itext.itextpdf</groupId>
      <artifactId>itextpdf</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-core</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-test</artifactId>
      <exclusions>
        <exclusion>
          <groupId>org.springframework</groupId>
          <artifactId>spring-core</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
      <exclusions>
        <exclusion>
          <groupId>org.springframework</groupId>
          <artifactId>spring-core</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.springframework</groupId>
          <artifactId>spring-web</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-webmvc</artifactId>
        <exclusions>
            <exclusion>
                <groupId>org.springframework</groupId>
                <artifactId>spring-core</artifactId>
            </exclusion>
        </exclusions>
    </dependency>

      <dependency>
          <groupId>com.alibaba</groupId>
          <artifactId>fastjson</artifactId>
      </dependency>

      <dependency>
          <groupId>org.projectlombok</groupId>
          <artifactId>lombok</artifactId>
      </dependency>
      <!-- jwt begin -->
      <dependency>
          <groupId>com.auth0</groupId>
          <artifactId>java-jwt</artifactId>
          <exclusions>
              <exclusion>
                  <groupId>com.fasterxml.jackson.core</groupId>
                  <artifactId>jackson-annotations</artifactId>
              </exclusion>
          </exclusions>
      </dependency>
      <dependency>
          <groupId>io.jsonwebtoken</groupId>
          <artifactId>jjwt</artifactId>
      </dependency>
      <dependency>
          <groupId>com.google.code.gson</groupId>
          <artifactId>gson</artifactId>
      </dependency>
      <!-- jwt end -->
      <!-- 加密 start-->
      <dependency>
          <groupId>org.bouncycastle</groupId>
          <artifactId>bcpkix-jdk18on</artifactId>
      </dependency>
      <!-- 加密 end-->

      <!-- 加载 freemarker -->
      <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-freemarker</artifactId>
      </dependency>

      <!--begin Excel-->
      <dependency>
          <groupId>com.alibaba</groupId>
          <artifactId>easyexcel</artifactId>
          <exclusions>
              <exclusion>
                  <groupId>org.apache.poi</groupId>
                  <artifactId>poi-ooxml</artifactId>
              </exclusion>
          </exclusions>
      </dependency>
      <dependency>
          <groupId>org.apache.poi</groupId>
          <artifactId>poi-ooxml</artifactId>
          <exclusions>
              <exclusion>
                  <groupId>org.apache.commons</groupId>
                  <artifactId>commons-compress</artifactId>
              </exclusion>
          </exclusions>
      </dependency>
      <dependency>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-compress</artifactId>
          <version>1.26.2</version>
      </dependency>
      <!--end Excel-->

      <!-- aliYun-sdk-oss -->
      <dependency>
          <groupId>com.aliyun.oss</groupId>
          <artifactId>aliyun-sdk-oss</artifactId>
          <exclusions>
              <exclusion>
                  <groupId>org.jdom</groupId>
                  <artifactId>jdom2</artifactId>
              </exclusion>
              <exclusion>
                  <groupId>org.bouncycastle</groupId>
                  <artifactId>bcprov-jdk15on</artifactId>
              </exclusion>
          </exclusions>
      </dependency>
      <dependency>
          <groupId>org.jdom</groupId>
          <artifactId>jdom2</artifactId>
      </dependency>
      <!-- end aliYun-sdk-oss -->

      <dependency>
          <groupId>commons-io</groupId>
          <artifactId>commons-io</artifactId>
      </dependency>
      <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-annotations</artifactId>
          <scope>compile</scope>
      </dependency>

      <!--        <dependency>-->
      <!--            <groupId>net.sf.barcode4j</groupId>-->
      <!--            <artifactId>barcode4j</artifactId>-->
      <!--        </dependency>-->

      <dependency>
          <groupId>com.google.zxing</groupId>
          <artifactId>core</artifactId>
      </dependency>

      <dependency>
          <groupId>org.springframework.integration</groupId>
          <artifactId>spring-integration-stream</artifactId>
      </dependency>

      <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter-api</artifactId>
          <scope>test</scope>
      </dependency>

      <!--kryo-->
      <dependency>
          <groupId>com.esotericsoftware</groupId>
          <artifactId>kryo</artifactId>
      </dependency>
      <dependency>
          <groupId>com.esotericsoftware</groupId>
          <artifactId>kryo-shaded</artifactId>
      </dependency>
      <dependency>
          <groupId>de.javakaffee</groupId>
          <artifactId>kryo-serializers</artifactId>
      </dependency>
      <dependency>
          <groupId>com.thoughtworks.xstream</groupId>
          <artifactId>xstream</artifactId>
      </dependency>
      <dependency>
          <groupId>com.belerweb</groupId>
          <artifactId>pinyin4j</artifactId>
          <scope>compile</scope>
      </dependency>
      <dependency>
          <groupId>jakarta.servlet</groupId>
          <artifactId>jakarta.servlet-api</artifactId>
      </dependency>
      <dependency>
          <groupId>jakarta.validation</groupId>
          <artifactId>jakarta.validation-api</artifactId>
      </dependency>
      <dependency>
          <groupId>jakarta.annotation</groupId>
          <artifactId>jakarta.annotation-api</artifactId>
      </dependency>
      <dependency>
          <groupId>org.apache.cxf</groupId>
          <artifactId>cxf-rt-frontend-jaxws</artifactId>
      </dependency>
      <dependency>
          <groupId>org.apache.cxf</groupId>
          <artifactId>cxf-rt-transports-http</artifactId>
      </dependency>
      <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
          <scope>compile</scope>
      </dependency>
      <dependency>
          <groupId>org.mockito</groupId>
          <artifactId>mockito-core</artifactId>
          <scope>compile</scope>
      </dependency>
      <dependency>
          <groupId>com.google.guava</groupId>
          <artifactId>guava</artifactId>
      </dependency>
      <dependency>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-pool2</artifactId>
      </dependency>
      <dependency>
          <groupId>org.springframework.cloud</groupId>
          <artifactId>spring-cloud-context</artifactId>
      </dependency>
      <dependency>
          <groupId>org.apache.httpcomponents.client5</groupId>
          <artifactId>httpclient5</artifactId>
      </dependency>
      <!-- 极光推送 -->
      <!--        <dependency>-->
      <!--            <groupId>cn.jpush.api</groupId>-->
      <!--            <artifactId>jpush-client</artifactId>-->
      <!--            <exclusions>-->
      <!--                <exclusion>-->
      <!--                    <groupId>io.netty</groupId>-->
      <!--                    <artifactId>netty-all</artifactId>-->
      <!--                </exclusion>-->
      <!--            </exclusions>-->
      <!--        </dependency>-->
      <dependency>
          <groupId>cn.jpush.api</groupId>
          <artifactId>jiguang-common</artifactId>
      </dependency>
      <!-- 信鸽 -->
      <dependency>
          <groupId>io.github.tpnsPush</groupId>
          <artifactId>xinge</artifactId>
      </dependency>
      <dependency>
          <groupId>com.vaadin.external.google</groupId>
          <artifactId>android-json</artifactId>
      </dependency>
      <!-- uni push 推送 -->
      <dependency>
          <groupId>com.gexin.platform</groupId>
          <artifactId>gexin-rp-sdk-http</artifactId>
      </dependency>
      <dependency>
          <groupId>com.gexin.platform</groupId>
          <artifactId>gexin-rp-fastjson</artifactId>
      </dependency>
      <dependency>
          <groupId>com.gexin.platform</groupId>
          <artifactId>gexin-rp-sdk-base</artifactId>
      </dependency>
      <dependency>
          <groupId>com.gexin.platform</groupId>
          <artifactId>gexin-rp-sdk-template</artifactId>
      </dependency>
      <dependency>
          <groupId>com.github.f4b6a3</groupId>
          <artifactId>ulid-creator</artifactId>
      </dependency>
  </dependencies>

  <build>
    <plugins>
      <!--打包-->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>*.properties</exclude>
          </excludes>
        </configuration>
        <executions>
          <execution>
            <phase>compile</phase>
            <!--<goals>-->
            <!--<goal>test-jar</goal>-->
            <!--</goals>-->
          </execution>
        </executions>
      </plugin>
      <!--源码打包-->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <phase>compile</phase>
            <goals>
              <goal>jar-no-fork</goal>
              <!--<goal>test-jar</goal>-->
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>8</source>
          <target>8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>


  <distributionManagement>
    <repository>
      <id>cdkj Maven Repository</id>
      <layout>default</layout>
      <url>https://packages.aliyun.com/maven/repository/2132815-release-WZ8rip/</url>
    </repository>
  </distributionManagement>
</project>
